--- a/language/English/strings.xml
+++ b/language/English/strings.xml
@@ -2553,6 +2553,7 @@
   <string id="24015">Musicvideo information</string>
   <string id="24016">Album information</string>
   <string id="24017">Artist information</string>
+  <string id="24018">PVR clients</string>
 
   <string id="24020">Configure</string>
   <string id="24021">Disable</string>
