--- a/language/English/strings.xml
+++ b/language/English/strings.xml
@@ -2127,7 +2127,7 @@
   <string id="24002">Add-on options</string>
   <string id="24003">Add-on Information</string>
 
-  <string id="24005">Media Sources</string>
+  <string id="24005">Media sources</string>
   <string id="24007">Movie information</string>
   <string id="24008">Screensaver</string>
   <string id="24009">Script</string>
