--- a/xbmc/cores/dvdplayer/Codecs/ffmpeg/doc/ffprobe-doc.texi
+++ b/xbmc/cores/dvdplayer/Codecs/ffmpeg/doc/ffprobe-doc.texi
@@ -7,8 +7,7 @@
 @sp 3
 @end titlepage
 
-@chapter Introduction
-
+@chapter Description
 @c man begin DESCRIPTION
 
 FFprobe gathers information from multimedia streams and prints it in
@@ -113,7 +112,11 @@ with name ``STREAM''.
 @settitle FFprobe media prober
 
 @c man begin SEEALSO
-ffmpeg(1), ffplay(1), ffserver(1)
+ffmpeg(1), ffplay(1), ffserver(1) and the FFmpeg HTML documentation
+@c man end
+
+@c man begin AUTHORS
+The FFmpeg developers
 @c man end
 
 @end ignore
