--- a/docs/manpages/xbmc.bin.1
+++ b/docs/manpages/xbmc.bin.1
@@ -24,7 +24,7 @@ XBMC will look for configurations in install folder instead of ~/.xbmc
 Enables screen resolutions such as PAL, NTSC, etc.
 .TP
 \fB\-l\fR or \fB\-\-lircdev\fR
-LircDevice to use default is /dev/lircd .
+LircDevice to use. See \-\-help output for the default.
 .TP
 \fB\-n\fR or \fB\-\-nolirc\fR
 do not use Lirc, aka no remote input.
