--- a/addons/visualization.milkdrop/resources/language/German/strings.xml
+++ b/addons/visualization.milkdrop/resources/language/German/strings.xml
@@ -2,13 +2,13 @@
 <strings>
     <!-- settings labels -->
     <string id="30000">Automatische Überblendezeit</string>
-    <string id="30001">Time Between Presets</string>
-    <string id="30002">Additional Random Time</string>
-    <string id="30003">Enable Anisotropic Filtering</string>
-    <string id="30004">Enable Hard Cuts</string>
-    <string id="30005">Loudness Threshold For Hard Cuts</string>
+    <string id="30001">Zeit zwischen den Presets</string>
+    <string id="30002">Zusätzliche zufällige Zeit</string>
+    <string id="30003">Anisotropischen Filter aktivieren</string>
+    <string id="30004">Hard Cuts aktivieren</string>
+    <string id="30005">Lautstärken-Grenzwert für Hard Cuts</string>
     <string id="30006">Durchschnittszeit zwischen Hard Cuts</string>
     <string id="30007">Maximale Wiederholrate</string>
-    <string id="30008">Aktiviere Stereo 3D</string>
+    <string id="30008">Stereo 3D aktivieren</string>
     <string id="30009">Preset Pack</string>
 </strings>
