--- a/language/English/strings.xml
+++ b/language/English/strings.xml
@@ -2165,7 +2165,7 @@
   <string id="24054">Changelog</string>
   <string id="24059">Would you like to enable this Add-on?</string>
   <string id="24060">Would you like to disable this Add-on?</string>
-  <string id="24061">Addon-on update available!</string>
+  <string id="24061">Add-on update available!</string>
   <string id="24062">Enabled Add-ons</string>
   <string id="24063">Auto update</string>
   <string id="24064">Add-on enabled</string>
