--- a/language/Russian/langinfo.xml
+++ b/language/Russian/langinfo.xml
@@ -1,8 +1,8 @@
 ﻿<?xml version="1.0" encoding="utf-8" standalone="yes"?>
 <language>
   <charsets>
-    <gui unicodefont="true">CP1251</gui>
-    <subtitle>CP1251</subtitle>
+    <gui unicodefont="true">utf-8</gui>
+    <subtitle>utf-8</subtitle>
   </charsets>
   <dvd>
     <menu>ru</menu>
