--- a/language/English/strings.xml
+++ b/language/English/strings.xml
@@ -190,6 +190,7 @@
   <string id="237">Minification</string>
   <string id="238">Magnification</string>
   <string id="239">Clear playlist on finish</string>
+  <string id="240">Display Mode</string>
 
   <string id="247">Scripts</string>
   <string id="248">Language</string>
