--- a/language/English/strings.xml
+++ b/language/English/strings.xml
@@ -2159,6 +2159,7 @@
   <string id="24038">Install</string>
   <string id="24039">Disabled Add-ons</string>
   <string id="24040">(Clear the current setting)</string>
+  <string id="24041">Install from zip file</string>
 
   <string id="24050">Available Add-ons</string>
   <string id="24051">Version:</string>
