--- a/language/Italian/langinfo.xml
+++ b/language/Italian/langinfo.xml
@@ -28,6 +28,14 @@
       <speedunit>kmh</speedunit>
       <timezone>CEST</timezone>
     </region>
+    <region name="Città del Vaticano">
+      <dateshort>DD.MM.YYYY</dateshort>
+      <datelong>DDDD, D. MMMM YYYY</datelong>
+      <time symbolAM="" symbolPM="">HH:mm:ss</time>
+      <tempunit>C</tempunit>
+      <speedunit>kmh</speedunit>
+      <timezone>CEST</timezone>
+    </region>
   </regions>
   <sorttokens>
     <token>Il</token>
